--- a/LoginView/src/main/res/values-es/strings.xml
+++ b/LoginView/src/main/res/values-es/strings.xml
@@ -6,5 +6,5 @@
     <string name="password">Contraseña</string>
     <string name="check">Comprobar</string>
     <string name="login">Acceder</string>
-    <string name="username">Usuario</string>
+    <string name="username">Usuari@</string>
 </resources>
