--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,7 @@
     <string name="recipient">Destinataria</string>
     <string name="calculate_bonification">Calcular bonificación</string>
     <string name="send_payment">Enviar pago</string>
+    <string name="send_payment_next">Enviar pago ></string>
     <string name="news">Noticias</string>
     <string name="open">Abrir</string>
     <string name="start_session">Iniciar sesión</string>
@@ -54,5 +55,8 @@
     <string name="confirm">Confirmar</string>
     <string name="return_back">Volver</string>
     <string name="sending_payment">Enviando pago...</string>
+    <string name="accepts">Acepta:</string>
+    <string name="bonus_return">Bonifica:</string>
+    <string name="entity_offers">Ofertas de la entidad</string>
 
 </resources>
