--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,7 +42,7 @@
     <string name="focus_qr_code_entity">Enfoca al código QR de la entidad</string>
     <string name="select_recipient">Elige destinataria</string>
     <string name="persons">Personas</string>
-    <string name="remember_password">Recordar contraseña</string>
+    <string name="remember_password">Recordar\ncontraseña</string>
     <string name="repeat_password">Repetir contraseña</string>
     <string name="person">Persona</string>
     <string name="entity">Entidad</string>
@@ -117,5 +117,8 @@
     <string name="bonus_percent">Porcentaje de bonificación</string>
     <string name="description_entity">Descripción de tu entidad</string>
     <string name="label_fill_info_later">Puedes completar esta información con calma más tarde. Te enviaremos un correo una vez completado el registro.</string>
+    <string name="not_account_yet_register">¿Todavía no tienes cuenta?\n¡Regístrate!</string>
+    <string name="already_account_login">Si ya tienes tu cuenta, entra pulsando aquí</string>
+    <string name="social_balance_info_soon">En breve verás la información del balance social ;)</string>
 
 </resources>
