- new progressbar fixes - new google account for firebase crashlytics and notifications (previous commit)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -179,5 +179,6 @@
     <string name="pin_codes_does_not_match">Los códigos PIN no coinciden</string>
     <string name="back_with_arrow"><![CDATA[< Atrás]]></string>
     <string name="invalid_field">Campo no válido</string>
+    <string name="new_payment_received">Nuevo pago recibido</string>
 
 </resources>
