--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -63,7 +63,8 @@
     <string name="intro_member_info">Para pagar con moneda social y obtener bonificaciones has de ser soci@ del MES o que alguna socia te invite.</string>
     <string name="discover_how">Descubre cómo \></string>
     <string name="your_balance_is">Tienes un saldo de:</string>
-    <string name="pending_payments_warning">Tienes %d nuevos pagos por confirmar</string>
+    <string name="pending_payments_warning">Tienes %d pagos pendientes de revisión</string>
+    <string name="pending_payments_warning_person">Te tienen que revisar %d pagos</string>
     <string name="consult_statistics">Consulta tus estadísticas de consumo y bonificaciones</string>
     <string name="graphics">Gráficas</string>
     <string name="transactions">Movimientos</string>
@@ -76,9 +77,8 @@
     <string name="new_payment">Nuevo pago</string>
     <string name="select_amount">Indica la cantidad</string>
     <string name="favourites">Favoritos</string>
-    <string name="total_amount_label">Introduce el importe total de tu compra en Euros para calcular tu bonificación</string>
-    <string name="boniatos_amount_label">Introduce la cantidad de &currency_name_plural; que vas a pagar. (1&currency_name_abrev;
-        = 1€)</string>
+    <string name="total_amount_label">Introduce el importe total de tu compra en Euros</string>
+    <string name="boniatos_amount_label">Introduce la cantidad de &currency_name_plural; que vas a pagar (1 &currency_name; equivale a 1€)</string>
     <string name="check_payment_data">Revisa los datos</string>
     <string name="payment_amount_label">Vas a pagar:</string>
     <string name="payment_recipient_label">a:</string>
